[package]
name = "rustpwman"
version = "2.2.1"
authors = ["Martin <rmsk2@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10"
sha2 = "0.10"
md-5 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
cipher = "0.4"
aes = "0.8"
cfb8 = "0.8"
aead = "0.5"
base64 = "0.22"
rand = "0.8"
scrypt = "0.11"
clap = "4.5"
rpassword = "7.3"
argon2 = "0.5"
toml = "0.8"
dirs = "5.0"
num-bigint = "0.4"
itertools = "0.13"
uds_windows =  {version ="1.1", optional = true}
users = {version = "0.11", optional = true}
reqwest = {version = "0.12", optional = true, features = ["blocking"]}

[target.'cfg(target_os = "linux")'.dependencies.cursive]
version = "0.21"
default-features = false
features = ["ncurses-backend"]

[target.'cfg(target_os = "macos")'.dependencies.cursive]
version = "0.21"

[target.'cfg(windows)'.dependencies]
pancurses = "0.17"
pdcurses-sys = "0.7"

[target.'cfg(windows)'.dependencies.cursive]
version = "0.21"
default-features = false
features = ["pancurses-backend"]

[features]
default = ["pwmanclientux", "chacha20", "webdav", "writebackup"]
pwmanclient = []
pwmanclientux = ["dep:users", "pwmanclient"]
pwmanclientwin = ["dep:uds_windows", "pwmanclient"]
webdav = ["dep:reqwest"]
chacha20 = []
writebackup = []