[package]
name = "rustpwman"
version = "2.6.0"
authors = ["Martin <rmsk2@gmx.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
base64 = "0.22"
rand = "0.9"
clap = "4.5"
rpassword = "7.4"
toml = "0.9"
dirs = "6.0"
num-bigint = "0.4"
itertools = "0.14"
qrcode = {version = "0.14", optional = true}
image = {version = "0.25", default-features = false, features = ["default-formats"], optional = true}
uds_windows =  {version ="1.1", optional = true}
users = {version = "0.11", optional = true}
reqwest = {version = "0.12", optional = true, features = ["blocking"]}

digest = "=0.11.0-rc.4"
sha2 = "=0.11.0-rc.3"
md-5 = "=0.11.0-rc.3"
aes-gcm = "=0.11.0-rc.2"
chacha20poly1305 = "=0.11.0-rc.2"
cipher = "=0.5.0-rc.2"
aes = "=0.9.0-rc.2"
cfb8 = "=0.9.0-rc.1"
aead = "=0.6.0-rc.3"
scrypt = "=0.12.0-rc.3"
argon2 = "=0.6.0-rc.2"

[target.'cfg(target_os = "linux")'.dependencies.cursive]
version = "0.21"
#default-features = false
#features = ["ncurses-backend"]

[target.'cfg(target_os = "macos")'.dependencies.cursive]
version = "0.21"

[target.'cfg(windows)'.dependencies]
pancurses = "0.17"
pdcurses-sys = "0.7"

[target.'cfg(windows)'.dependencies.cursive]
version = "0.21"
default-features = false
features = ["pancurses-backend"]

[features]
default = ["pwmanclientux", "chacha20", "webdav", "writebackup", "qrcode"]
pwmanclient = []
pwmanclientux = ["dep:users", "pwmanclient"]
pwmanclientwin = ["dep:uds_windows", "pwmanclient"]
webdav = ["dep:reqwest"]
qrcode = ["dep:image", "dep:qrcode"]
chacha20 = []
writebackup = []